rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/dot_super.ja
.class HelloWorld       .super java/lang/Object

.end method